Rename .drawer-visible to .auto-hide. - Delete drawer-fixed example - Update navbar-autohide example layout

--- a/scss/_drawer.scss
+++ b/scss/_drawer.scss
@@ -12,7 +12,7 @@
   transition: transform .2s cubic-bezier(.4, 0, .2, 1) .1s;
   transform: translateX(-100%);
 
-  &.drawer-visible {
+  &.auto-hide {
     position: relative;
     top: auto;
     z-index: 1029;
